--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ TWILIO_PHONE_NUMBER=+917715952128
 GMAIL_USER=sakshishukla00507@gmail.com
 GMAIL_PASS=vkhwmytxeuyzheec
 ADMIN_EMAIL=sakshiiis123456@gmail.com
+GMAIL_PASS=uhttdhaxspfmtiav
+GMAIL_USER=sakshishukla00507@gmail.com
