--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "version": 2,
   "functions": {
-    "api/server.js": {
-      "includeFiles": "dist/**"
+    "server/server.js": {
+      "memory": 1024,
+      "maxDuration": 10
     }
   },
   "rewrites": [
